@@ -7,6 +7,7 @@ Revision history for Compression-Util
         - Added the mrl_compress() and mrl_decompress() functions.
         - Added the read_bit_lsb(), read_bits_lsb(), int2bits(), int2bits_lsb(), bits2int() and bits2int_lsb() functions.
         - Added the read_null_terminated() function.
+        - Added the string2symbols() and symbols2string() functions.
 
         [IMPROVEMENTS]
 
